SUBTERFUGUE NEWS - notable changes between versions


Version 0.2 ("tiger")

* Fixes to make SUBTERFUGUE work again with the 2.4 kernel.  (new system
  calls, slightly different wait behaviors, etc)

* Added 'now' and 'delta' flags to TimeWarp trick.  Experience the future and
  the past!

* FixFlash trick fixes a problem with the Macromedia Flash plugin that causes
  Netscape to hang when Flash tries to use /dev/dsp and it's in use.

* The TRACESYSGOOD patch is included in the kernel as of 2.4.0-test10, so
  revert to disabling the "wait channel hack" by default.  (Only vanilla
  2.3.99 through 2.4.0-test9 need it now.)

* Added '--nowall', which allows sf to run somewhat in a degenerate way under
  linux 2.2.

* Disable python '-O' flag by default, as it turns off assertion checking,
  which is still extremely useful at this point.


Version 0.1.99a ("superstar")

* Fix bug that causes sf to exit prematurely if only kids with parent init
  remain.


Version 0.1.99 ("superstar")

* Added a fix to make SUBTERFUGUE work again with the latest 2.4 kernels.
  Made usage of the "wait channel hack" the default, for vanilla 2.4 users.

* Added two new tricks, NetThrottle and TimeWarp, which you can see in action
  now at the bottom of the screenshots page
  (http://subterfugue.org/screenshot.html).  NetThrottle, in particular, seems
  like it would be handy for everyday use.  (TimeWarp is more of an amusement,
  though it might help you cheat at certain arcade games.  :-)

* Added a polished version of the SUBTERFUGUE motivation document to the web
  site (http://subterfugue.org/motivation.html).  Comments welcome.  It's
  pretty over-the-top.  Does it sound like it was composed in a remote Montana
  cabin?  :-0

* Added a man page for sf(1), based on Pavel Machek's original draft.

* Added an 'install' target and Debianization.  A Debian package will be
  available with this release.  It hasn't been tested much yet, but it's
  probably pretty safe.
